# CG1

./: .gitignore  .gitmodules
AIS/Python/mc_hemisphere_skeleton/: Ex1.py  Phong.py  TaskWeek6.py  inversion_method_skeleton.py  lightprobe.py  mc_hemisphere_skeleton.py  mc_hemisphere_skeletonMirko.py
AuD/: .classpath  README.md
AuD/src/aud/: A234Tree.java  BTree.java  BinaryTree.java  DList.java  HashMap.java  Queue.java  SList.java  Stack.java  Vector.java  package-info.java
AuD/src/blatt01/: JosephusProblem.java  Palindrome.java  TailRecursive.java
AuD/src/blatt02/: IntSList.java  LinkedNode.java  Predicate.java  TPalindrome.java
AuD/src/blatt03/: MyCircle.java  MyDList.java  MySList.java
AuD/src/blatt04/: BuildBinTree.java  ForwardList.java  RecursionToStack.java
AuD/src/blatt05/: ExampleExpression.java  IntBinTree.java  MyBinTree.java
AuD/src/blatt06/: Differentiation.java  ExprWithPow.java  SimpleTree.java
AuD/src/blatt07/: A234Example.java  AVLExample.java  RedBlackExample.java
AuD/src/blatt08/: BTreeEx.java  HeapEx.java  MaxHeap.java
AuD/src/blatt09/: Food.java  HashLinQuad.java  IceBox.java
AuD/src/blatt10/: AdjMatrix.java  GraphAll.java  GraphSearch.java
AuD/src/blatt11/: DijkstraEx.java  PrimEx.java  TopoSort.java
AuD/src/blatt12/: GreedyvsDyn.java  KnapsackDyn.java
AuD/src/pruefung/: Aufg12.java  Aufg2.java
BV/: FourierTest.m  p01_draw.m  p01_execute.m  p01_image_statistics.m  p01_reconstruct.m  p02_fft2_test.m  p02_modify.m  p02_modify_test.m  p02_myfft2.m  p03_comp.m  p03_wien_filt.m  p05_conv2d.m  p05_filt2d.m  p05_test.m  p06_segment.m  test.m  testÜ8.m
BeeDay/: .classpath  .project
BeeDay/src/: Agent833.java  Agent833Junior.java  BeeBee.java  Test211106.java
CG/: Task4 Code.txt  Task5 Code.txt
CG/A_01_Tutorial Package/: CMakeLists.txt
CG/A_01_Tutorial Package/exercises/: CMakeLists.txt
CGTools/Code Base/assignment2_code/: vanderCorput.py
CGTools/Code Base/tut2_code/: tut2_horner.py  tut2_poly.py  tut2_polyeval.py
CGTools/Code Base/tut9_code/: plot_spherical_harmonics.py  spherical_harmonics.py
CGTools/Code Base/tut9_code_sol/: plot_associated_legendre.py  plot_spherical_harmonics.py
CGTools/Own Code/: Assignment1.py  Assignment2.py  Ex1.py  Ex2.py  Ex3.py  Ex4.py  Ex5.py  Ex6.py  Ex7.py  Ex8.py  Tst.py  monomial_dual.py  rk_legendre.py  spherical_harmonics.py
CIG/Exercises/Exercise3/: E3_MonteCarloCartPole.py
CPlusPlus/Cpp_U01/: Cpp_U01.sln
CPlusPlus/Cpp_U01/Cpp_U01/: Cpp_U01.vcxproj  main.cpp
CPlusPlus/Cpp_U02/ScopeTimerGuidline/: CMakeLists.txt
CPlusPlus/Cpp_U03/: CMakeLists.txt  dynamicobjectlist.cpp  dynamicobjectlist.hpp  program.cpp
CPlusPlus/Cpp_U04/: CMakeLists.txt  RandomChar.cpp  TestObject.cpp  TestObject.h  program.cpp
CPlusPlus/Cpp_U05/: CMakeLists.txt  dynamicobjectlist.cpp  dynamicobjectlist.hpp  object.cpp  object.h  program.cpp
CPlusPlus/Cpp_U06/: CMakeLists.txt  node.cpp  node.hpp  operators.cpp  operators.hpp  program.cpp  valuenode.cpp  valuenode.hpp
CPlusPlus/Cpp_U07/: CMakeLists.txt  main.cpp  myvector.cpp  myvector.h
CPlusPlus/Cpp_U08/: CMakeLists.txt  Spacestuff.h  program.cpp
CPlusPlus/Cpp_U09/: CMakeLists.txt  filepolicy.cpp  filepolicy.hpp  logger.cpp  logger.hpp  program.cpp
CPlusPlus/Cpp_U10/: CMakeLists.txt  hybridarray.cpp  hybridarray.hpp
CPlusPlus/Cpp_U11/src/: CMakeLists.txt  fleet.cpp  main.cpp  spaceshipfactory.cpp  spaceshipfactory.h
CPlusPlus/Klausur/: Klausur.sln
CPlusPlus/Klausur/Klausur/: Klausur.vcxproj  Quelle.cpp
EinInf/: .project
EinInf/src/: README.md  To10.java
EinInf/src/Sortieralgorithmen/: BubbleSort.java  InsertionSort.java  Mergesort.java  Quicksort.java  SelectionSort.java  Sort.java
EinInf/src/animal/: Animal.java  Bird.java  Fish.java  RoadRunner.java
EinInf/src/blatt01/: HeronKubik.java  Prime.java
EinInf/src/blatt02/: Median.java  MyIntArray.java  Transformation.java
EinInf/src/blatt03/: MyClass.java  PerfectMerge.java  (+1 more)
GPU/tut1_skeleton/: CMakeLists.txt
GPU/tut2_skeleton/skeleton/: CMakeLists.txt
GPU/tut2_skeleton/skeleton/src/: norm.cpp
GPU/tut3_skeleton/skeleton/: CMakeLists.txt
GPU/tut3_skeleton/skeleton/src/: macheps.cpp  norm.cpp
GPU/tut4_skeleton/skeleton/: CMakeLists.txt
GPU/tut4_skeleton/skeleton/src/: dnsserver.cpp  dnsserver.h  main.cpp  simulator.cpp  simulator.h
GPU/tut5_skeleton/skeleton/: CMakeLists.txt
GPU/tut5_skeleton/skeleton/src/: main.cpp
GPU/tut8_skeleton/skeleton/: CMakeLists.txt
GPU/tut8_skeleton/skeleton/src/: mean.cu
GPU/tut9_skeleton/skeleton/: CMakeLists.txt
GPU/tut9_skeleton/skeleton/images/: im.pgm  im_conv_host.pgm
GPU/tut9_skeleton/skeleton/src/: conv_separable_host.cpp  cuda_util.h  image.cpp  image.h  kernel_separable.h  main.cu
SortingAlgorithms/: .classpath
SortingAlgorithms/src/: Sort.java
Vorkurs/: .classpath  .project
Vorkurs/src/: Aufgabe1.java  Aufgabe3.java  Aufgabe5.java  AufgabeArrays.java  AufgabeTafel.java  HelloWorld.java  Methoden.java  MethodenAufgaben.java  PascalschesDreieck.java  Rekursion.java  ScannerundSwitch.java  ScopesundInkrement.java
(+149 files in other folders)
